Sculpt Mode - Draw Face Sets not working after choosing commands from Face Set menu #112817

Closed
opened 2023-09-24 21:51:35 +02:00 by RumenBelev · 3 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: GeForce GTX 760M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 425.31

Blender Version
Broken: version: 3.6.3, branch: blender-v3.6-release, commit date: 2023-09-21 06:06, hash: d3e6b08276ba
Worked: Unknown

Short description of error
Sculpt Mode - Draw Face Sets not working after choosing commands from Face Set menu

Exact steps for others to reproduce the error

  1. Start with new file.
  2. Add Icosphere with 4-5 subdivisions (any mesh for sculpting would do)
  3. Switch to Sculpt Mode
  4. Select Draw Face Sets Tool and draw one or more strokes on the mesh (to confirm its working)
    Applying any of the following operations will disable the Draw Face Sets Tool from further use:

5a. Use Shift+W or from the menu Face Sets > Expand Face Set by Topology
5b. Use Shift+Alt+W or from the menu Face Sets > Expand Active Face Set

The above operations are performed without problem, but after confirmation of the operation the Draw Face Sets Tool is no longer working - cannot draw any new face sets.

Observations:
Switching from any other interaction mode back to Sculpt mode re-enables the tool, but the issue can be reproduced if repeated steps 5a or 5b
Canceling these operation with Esc do not affect the Draw Face Sets Tool.
Changing to any sculpting tools and back to Draw Face Sets Tool - without leaving Sculpt mode does not clear the issue.
Some sculpting tools also do not work if enabled after the lock - like Grab, Pinch, Rotate, Smooth, Draw, etc. Some of them work - like Elastic Deform, Pose.

If you use Mask Tool before step 4 the above bug cannot be reproduced unless starting a new file.

**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: GeForce GTX 760M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 425.31 **Blender Version** Broken: version: 3.6.3, branch: blender-v3.6-release, commit date: 2023-09-21 06:06, hash: `d3e6b08276ba` Worked: Unknown **Short description of error** Sculpt Mode - Draw Face Sets not working after choosing commands from Face Set menu **Exact steps for others to reproduce the error** 1. Start with new file. 2. Add Icosphere with 4-5 subdivisions (any mesh for sculpting would do) 3. Switch to Sculpt Mode 4. Select Draw Face Sets Tool and draw one or more strokes on the mesh (to confirm its working) Applying any of the following **operations** will disable the Draw Face Sets Tool from further use: 5a. Use Shift+W or from the menu Face Sets > Expand Face Set by Topology 5b. Use Shift+Alt+W or from the menu Face Sets > Expand Active Face Set The above **operations** are performed without problem, but after confirmation of the operation the Draw Face Sets Tool is no longer working - cannot draw any new face sets. Observations: Switching from any other interaction mode back to Sculpt mode re-enables the tool, but the issue can be reproduced if repeated steps 5a or 5b Canceling these **operation** with Esc do not affect the Draw Face Sets Tool. Changing to any sculpting tools and back to Draw Face Sets Tool - without leaving Sculpt mode does not clear the issue. Some sculpting tools also do not work if enabled after the lock - like Grab, Pinch, Rotate, Smooth, Draw, etc. Some of them work - like Elastic Deform, Pose. If you use Mask Tool before step 4 the above bug cannot be reproduced unless starting a new file.
RumenBelev added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-09-24 21:51:35 +02:00

I think this is still the behavior in the latest main.
Just tested it on:
Blender 4.0.0 Alpha
build date: 2023-09-24
build time: 20:41:55
build commit date: 2023-09-24
build commit time: 20:37
build hash: eef2a706b4
build platform: Linux

I think this is still the behavior in the latest main. Just tested it on: Blender 4.0.0 Alpha build date: 2023-09-24 build time: 20:41:55 build commit date: 2023-09-24 build commit time: 20:37 build hash: eef2a706b452 build platform: Linux

It seems that it has something to do with:

node_update_mask_redraw(PBVH &pbvh, PBVHNode &node) in source/blender/blenkernel/intern/pbvh.cc

Where PBVHNode flags gets set with PBVH_FullyUnmasked and PBVH_FullyMasked but it doesn't get unset later.

And it worked properly when I added this at the end of sculpt_expand_finish in source/blender/editors/sculpt_paint/sculpt_expand.cc:

for (PBVHNode *node : nodes) {
BKE_pbvh_node_fully_masked_set(node, false);
BKE_pbvh_node_fully_unmasked_set(node, false);
}

Just resetting these flags after the expand operation (using Shift+W) is done.

It seems that it has something to do with: **node_update_mask_redraw(PBVH &pbvh, PBVHNode &node)** in **source/blender/blenkernel/intern/pbvh.cc** Where PBVHNode flags gets set with PBVH_FullyUnmasked and PBVH_FullyMasked but it doesn't get unset later. And it worked properly when I added this at the end of **sculpt_expand_finish** in **source/blender/editors/sculpt_paint/sculpt_expand.cc**: `for (PBVHNode *node : nodes) {` ` BKE_pbvh_node_fully_masked_set(node, false);` ` BKE_pbvh_node_fully_unmasked_set(node, false);` `}` Just resetting these flags after the expand operation (using Shift+W) is done.
Member

Can confirm the regression (broke between 3.3 - 3.4)

Can confirm the regression (broke between 3.3 - 3.4)
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-27 23:10:36 +02:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-09-27 23:14:16 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112817
No description provided.