Fix: #112817 resetting the fully masked and fully unmasked flags after the expand operation